--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@reduxjs/toolkit": "^2.6.1",
     "bootstrap": "^5.3.8",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.9.2"
+    "react-router": "^7.9.2",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
