--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/js-cookie": "^3.0.6",
     "bootstrap": "^5.3.8",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
