--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@types/js-cookie": "^3.0.6",
     "bootstrap": "^5.3.8",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
